# pediatric-exsoskeleton

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: GuiFBTransp.cfg  GuiFFCal.cfg  GuiOscillatorForce.cfg  GuiOscillatorPos.cfg  GuiSMWalking.cfg  GuiTeleop.cfg
config/: PlotJuggler_RobotState_CubeMars.xml
docs/: GuiConfig-usage.dox  GuiConfig.dox  GuiConfig.wikidoc  GuiFBTranspConfig-usage.dox  GuiFBTranspConfig.dox  GuiFBTranspConfig.wikidoc  GuiFFCalConfig-usage.dox  GuiFFCalConfig.dox  GuiFFCalConfig.wikidoc  GuiFFCalStanceConfig-usage.dox  GuiFFCalStanceConfig.dox  GuiFFCalStanceConfig.wikidoc  GuiFFCalSwingConfig-usage.dox  GuiFFCalSwingConfig.dox  GuiFFCalSwingConfig.wikidoc  GuiOscillatorConfig-usage.dox  GuiOscillatorConfig.wikidoc  GuiOscillatorForceConfig.dox  GuiOscillatorPosConfig-usage.dox  GuiOscillatorPosConfig.dox  GuiOscillatorPosConfig.wikidoc  GuiSMWalkingConfig-usage.dox  GuiSMWalkingConfig.dox  GuiSMWalkingConfig.wikidoc  GuiTeleopConfig-usage.dox  GuiTeleopConfig.dox  GuiTeleopConfig.wikidoc
exoskeleton_firmware/: boot.py  main.py  pymakr.conf
launch/: FBFF.launch  multi_robot.launch
micropython_logger/: param.py
multiplot/: ctrl_FB.xml  ctrl_FF.xml  ctrl_Oscillator.xml  ctrl_Oscillator_Pos_Shadow.xml  ctrl_Oscillator_Pos_Tails.xml  ctrl_Teleop.xml  ctrl_Teleop_Shadow.xml  multiplot1.xml  multirobot.xml  robot_state.xml  robot_state_CubeMars.xml  robot_state_Tails.xml  robot_state_Tails_reduced.xml
scripts/: ROS2tcp.py  ROS2udp.py  multi_robot.py  tcp2ROS.py  udp2ROS.py
src/: ROS2tcp.py  ROS2udp.py  multi_robot.py  param.py  (+1 more)
(+94 files in other folders)
